--- a/src/components/media-types/glb/index.module.scss
+++ b/src/components/media-types/glb/index.module.scss
@@ -2,7 +2,6 @@
 
 .viewer {
   width: 100%;
-  height: 60vh;
   display: block;
   margin: 0 auto;
   border: none;
@@ -30,7 +29,6 @@
 
 model-viewer {
   width: 100%;
-  height: 60vh;
   margin: 0 auto;
 }
 
