--- a/src/components/media-types/image/index.module.scss
+++ b/src/components/media-types/image/index.module.scss
@@ -11,20 +11,10 @@
 
 .container {
   .image {
-    width: 100vw;
     display: block;
     max-width: 100%;
     height: auto;
     margin: 0 auto;
-
-    @include respond-to('tablet') {
-      max-height: 70vh;
-      height: initial;
-    }
-
-    @include respond-to('desktop') {
-      max-height: 60vh;
-    }
   }
 }
 
